# hermes-membase

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
ci/: pypi-publish.yml
src/membase_hermes/: __init__.py  capture.py  cli.py  client.py  config.py  current_date.py  format.py  installer.py  mirror.py  oauth.py  provider.py  sanitize.py  star_prompt.py  update_check.py  wiki_project.py
src/membase_hermes/plugin/: __init__.py  cli.py  plugin.yaml
tests/: test_plugin_cli.py  test_provider_capture.py  test_provider_tools.py
