[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membase-hermes"
version = "0.1.0"
description = "Membase memory provider package for Hermes Agent"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.0",
    "PyYAML>=6.0",
]

[project.scripts]
membase-hermes = "membase_hermes.cli:main"
membase-hermes-install = "membase_hermes.installer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
