[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-membase"
version = "0.1.4"
description = "Membase memory provider package for Hermes Agent"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.0",
    "PyYAML>=6.0",
]

[project.scripts]
hermes-membase = "membase_hermes.cli:main"
hermes-membase-install = "membase_hermes.installer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
membase_hermes = ["plugin/*.yaml"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
