[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-membase"
version = "0.1.5"
description = "Membase memory provider package for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "mypy>=1.19.0",
    "ruff>=0.15.0",
    "twine>=6.0.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
hermes-membase = "membase_hermes.cli:main"
hermes-membase-install = "membase_hermes.installer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
membase_hermes = ["plugin/*.yaml"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
files = ["src/membase_hermes", "tests"]
ignore_missing_imports = true
strict = false
